--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -24,6 +24,11 @@ $headings-font-family:     $primary-font;
 $headings-font-weight:     700;
 $headings-line-height:     1.2;
 
+// Header
+// ==========================================================================
+$header-mobile-height: 50px;
+
+
 // Media Query Ranges
 // ==========================================================================
 $sm: 640px;
