--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -129,6 +129,7 @@ hr {
   &--gray { color: #ddd }
   &--black { color: #000 }
   &--white { color: #fff }
+  &--green { color: $primary-color }
 }
 
 // Rimay Class
