--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,4 +1,4 @@
- <ul class="main-menu u-unstyled menu" itemscope itemtype="http://schema.org/SiteNavigationElement" role="menu">
+ <ul class="mainMenu u-unstyled menu" itemscope itemtype="http://schema.org/SiteNavigationElement" role="menu">
 {{#foreach navigation}}
     <li class="menu-item" itemprop="name" role="menuitem">
         <a href="{{url absolute="true"}}" class="u-block {{#if current}}active{{/if}}" {{^is "amp"}}itemprop="url"{{/is}}>{{label}}</a>
