--- a/partials/widget/header-topics.hbs
+++ b/partials/widget/header-topics.hbs
@@ -4,7 +4,7 @@
         <ul class="menu menu-topics u-fontSizeSmall u-unstyled">
             {{#foreach topics}}
                 <li class="menu-item u-textCapitalize u-fontWeightSemibold">
-                    <a href="{{url absolute="true"}}" title="{{name}}">{{name}}</a>
+                    <a href="{{url absolute="true"}}" title="{{name}}">#{{name}}</a>
                 </li>
             {{/foreach}}
         </ul>
