--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -12,7 +12,7 @@
                 </a>
             </div>
 
-            <div class="nav-header--right u-flexCenter u-hide-after-md">
+            <div class="nav-header--right u-flexCenter u-hide-after-lg">
                 {{!-- Open Search in Mobile --}}
                 <div class="js-open-search nav-menu-search u-pointer"><span class="icon icon--search icon--green">{{> "icons/search"}}</span></div>
                 {{!-- Open Menu in Mobile --}}
@@ -22,7 +22,7 @@
 
         <div class="nav-body">
             <div class="nav-body-wrap">
-                <div class="nav-social-media u-hide-after-md">
+                <div class="nav-social-media u-hide-after-lg">
                     {{!-- Widget Social Media - partials/widget/social-media.hbs --}}
                     {{> "widget/social-media"}}
                 </div>
@@ -31,8 +31,8 @@
                 {{navigation}}
 
                 {{!-- Open Seaarch --}}
-                <div class="search-field u-marginBottom20 u-hide-before-md">
-                    <div class="js-open-search u-pointer">
+                <div class="search-field u-marginBottom20 u-hide-before-lg">
+                    <div class="js-open-search u-pointer u-fontSizeBase u-fontWeightMedium">
                         <span>Search</span>
                         <span class="icon icon--search icon--gray"> {{> "icons/search"}} </span>
                     </div>
