--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -7,5 +7,10 @@
   margin: 15px 0;
   color: $primary-color;
 
-  a { padding: 2px 0; display: block }
+  a {
+    padding: 2px 0;
+    display: inline-block;
+
+    &:hover { border-bottom-color: transparent; }
+  }
 }
