--- a/partials/sidebar/sidebar-home-top.hbs
+++ b/partials/sidebar/sidebar-home-top.hbs
@@ -1,7 +1,7 @@
-<aside class="rimary-sidebar sidebar u-flexColumnTop">
+<aside class="rimary-sidebar sidebar u-flexColumnTop u-hide-before-md">
     <div class="sticky-top-wrap u-flex-1 u-flexColumnTop">
         <div class="sticky">
-            <h3>hello Im sidebar sticky Top</h3>
+            <h3>hello Im sidebar for home TOp sticky Top</h3>
         </div>
     </div>
 </aside>
