--- a/post.hbs
+++ b/post.hbs
@@ -3,8 +3,8 @@
 {{!-- Class for <body> --}}
 {{#contentFor "special_body_class"}}is-article{{/contentFor}}
 
-<div class="content-wrap">
-    <div class="content">
+<div class="rimay-wrap">
+    <div class="rimay-content">
         {{!-- Article - partials/article/article.hbs --}}
         {{#post}} {{> "article/article"}} {{/post}}
     </div>
