--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -28,6 +28,9 @@ $headings-line-height:     1.2;
 // ==========================================================================
 $header-mobile-height: 50px;
 
+// Wrap
+// ==========================================================================
+$container-gutter-width: 20px;
 
 // Media Query Ranges
 // ==========================================================================
