--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -60,6 +60,7 @@
 .u-textCapitalize { text-transform: capitalize }
 .u-textAlignCenter { text-align: center }
 .u-block { display: block }
+.u-inlineBlock { display: inline-block }
 
 // Margin
 .u-marginAuto {
@@ -68,6 +69,7 @@
 }
 
 .u-marginTop20 { margin-top: 20px }
+.u-marginTop15 { margin-top: 15px }
 .u-marginTop30 { margin-top: 30px }
 
 .u-marginBottom10 { margin-bottom: 10px }
