--- a/partials/home/home-featured-story.hbs
+++ b/partials/home/home-featured-story.hbs
@@ -1,13 +1,18 @@
+{{#get "posts" limit="3" filter="featured:true" include="tags" as |post_featured_home|}}
+{{#if post_featured_home}}
+
 <div class="rimay-paway-right">
-    {{#foreach posts from="2" to="5"}}
+    {{#foreach post_featured_home}}
         <article class="mini-post">
-            <h3 class="mini-post-title"><a href="{{url}}">{{title}}</a></h3>
-            {{!-- Meta {primary tag} --}}
-            <div class="u-meta">
-                <div class="u-meta-byline">
-                    {{#if primary_tag}}{{#primary_tag}}<span class="u-meta-tag"><a class="u-colorHoverPrimary u-colorInherit u-relative zindex3" href="{{url}}" aria-label="{{name}}">{{name}}</a></span>{{/primary_tag}}{{/if}}
-                </div>
-            </div>
+            <h3 class="mini-post-title u-lineHeight1 u-fontWeightBold u-fontSize20">
+                <a href="{{url}}" class="u-colorInherit u-block">{{title}}</a>
+            </h3>
+
+            {{!-- Meta {primary tag} partiasl/helper/meta-meta.hbs --}}
+            {{> "helper/helper-meta"}}
         </article>
     {{/foreach}}
 </div>
+
+{{/if}}
+{{/get}}
