--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,74 +1,68 @@
-.rimay-paway
-{
-    display: flex;
-    justify-content: space-between;
-}
+// .rimay-wrap {
+//   display: flex;
+//   flex-direction: column;
+//   position: relative;
+// }
 
-.rimay-paway-left
-{
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding-right: 2%;
-    padding-bottom: 10px;
+// .rimay-paway {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-    transition: opacity .15s linear;
+// .rimay-paway-left {
+//   margin-top: 1em;
+//   margin-bottom: 1em;
+//   padding-right: 2%;
+//   padding-bottom: 10px;
 
-    opacity: 1;
-    border-bottom: 1px solid #ddd;
-}
+//   transition: opacity 0.15s linear;
 
-.rimay-paway-right
-{
-    margin-top: 1em;
-    margin-right: 20px;
-    margin-left: 20px;
-    padding-bottom: .875em;
-    padding-left: 0;
+//   opacity: 1;
+//   border-bottom: 1px solid #ddd;
+// }
 
-    border-bottom: 4px solid #ddd;
-}
+// .rimay-paway-right {
+//   margin-top: 1em;
+//   margin-right: 20px;
+//   margin-left: 20px;
+//   padding-bottom: 0.875em;
+//   padding-left: 0;
 
-@media #{$md-and-up}
-{
-    .rimay-paway-left
-    {
-        padding-bottom: 0;
+//   border-bottom: 4px solid #ddd;
+// }
 
-        border-bottom: 0;
-    }
+// @media #{$md-and-up} {
+//   .rimay-paway-left {
+//     padding-bottom: 0;
 
-    .rimay-paway-right
-    {
-        flex-basis: 32%;
+//     border-bottom: 0;
+//   }
 
-        margin-right: 0;
-        margin-left: 0;
-        padding-bottom: 0;
+//   .rimay-paway-right {
+//     flex-basis: 32%;
 
-        border-bottom: none;
-    }
-}
+//     margin-right: 0;
+//     margin-left: 0;
+//     padding-bottom: 0;
 
-@media #{$lg-and-up}
-{
-    .rimay-paway-left
-    {
-        flex-basis: 65%;
-    }
-    .rimay-paway-right
-    {
-        flex-basis: 34%;
-    }
-}
+//     border-bottom: none;
+//   }
+// }
 
-@media #{$xl-and-up}
-{
-    .rimay-paway-left
-    {
-        flex-basis: 63%;
-    }
-    .rimay-paway-right
-    {
-        flex-basis: 35%;
-    }
-}
+// @media #{$lg-and-up} {
+//   .rimay-paway-left {
+//     flex-basis: 65%;
+//   }
+//   .rimay-paway-right {
+//     flex-basis: 34%;
+//   }
+// }
+
+// @media #{$xl-and-up} {
+//   .rimay-paway-left {
+//     flex-basis: 63%;
+//   }
+//   .rimay-paway-right {
+//     flex-basis: 35%;
+//   }
+// }
